[package]
name = "ehctl"
version = "0.1.5"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["command-line-interface"]


[dependencies]
base64 = "0.13.0"
chrono = "0.4"
clap = { version = "3.0.13", features = ["derive"] }
futures = "0.3" # for our async / await blocks
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] } # reqwest with JSON parsing support
serde = "1.0.136"
serde_json = "1.0"
tabled = "0.5"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
toml = "0.5.2"